# substrate-subxt

./: CHANGELOG.md  Cargo.toml  FILE_TEMPLATE  README.md
client/: Cargo.toml
client/src/: lib.rs
examples/: fetch_all_accounts.rs  fetch_remote.rs  kusama_balance_transfer.rs  submit_and_watch.rs  transfer_subscribe.rs
proc-macro/: Cargo.toml
proc-macro/src/: call.rs  event.rs  lib.rs  module.rs  store.rs  test.rs  utils.rs
proc-macro/tests/: balances.rs
src/: error.rs  events.rs  lib.rs  metadata.rs  rpc.rs  runtimes.rs  subscription.rs
src/extrinsic/: extra.rs  mod.rs  signer.rs
src/fabric/: balances.rs  contracts.rs  mod.rs  session.rs  staking.rs  sudo.rs  system.rs
src/frame/: balances.rs  contracts.rs  mod.rs  session.rs  staking.rs  sudo.rs  system.rs
test-node/: Cargo.toml  build.rs
test-node/runtime/: Cargo.toml  build.rs
test-node/runtime/src/: lib.rs
test-node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  service.rs
