[workspace]
members = [".", "client", "proc-macro", "test-node"]

[package]
name = "tetcore-subxt"
version = "0.13.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/tetcoin/tetcore-subxt"
documentation = "https://docs.rs/tetcore-subxt"
homepage = "https://core.tetcoin.org/"
description = "Submit extrinsics (transactions) to a tetcore node via RPC"
keywords = ["tetcoin", "tetcore", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
client = ["tetcore-subxt-client"]

# enable this feature to run tests which require a local dev chain node
integration-tests = []

[dependencies]
log = "0.4.13"
thiserror = "1.0.23"
futures = "0.3.10"
jsonrpsee = { version = "0.1.0", features = ["ws"] }
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
url = "2.2.0"
codec = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive", "full"] }

fabric-metadata = "12.0.0"
fabric-support = "2.0.0"
tp-runtime = "2.0.1"
tp-version = "2.0.1"
noble-indices = "2.0.0"
hex = "0.4.2"
tetcore-std = "2.0.1"
application-crypto = { version = "2.0.1", package = "tet-application-crypto" }
noble-staking = "2.0.0"

tp-rpc = { version = "2.0.1", package = "tp-rpc" }
tet-core = { version = "2.0.1", package = "tet-core" }
tetcore-subxt-client = { version = "0.5.0", path = "client", optional = true }
tetcore-subxt-proc-macro = { version = "0.13.0", path = "proc-macro" }

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
env_logger = "0.8.2"
fabric-system = "2.0.0"
noble-balances = "2.0.1"
tp-keyring = "2.0.1"
tetcore-subxt-client = { version = "0.5.0", path = "client" }
tempdir = "0.3.7"
test-node = { path = "test-node" }
wabt = "0.10.0"
assert_matches = "1.4.0"
