[package]
name = "tetcore-subxt-client"
version = "0.5.0"
authors = ["David Craven <david@craven.ch>", "Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/tetcoin/tetcore-subxt"
documentation = "https://docs.rs/tetcore-subxt-client"
homepage = "https://core.tetcoin.org/"
description = "Embed a tetcore node into your subxt application."
keywords = ["tetcoin", "tetcore", "blockchain"]

[dependencies]
async-std = "1.8.0"
futures = { version = "0.3.9", features = ["compat"], package = "futures" }
futures01 = { package = "futures", version = "0.1.29" }
jsonrpsee = "0.1.0"
log = "0.4.13"
tc-network = { version = "0.8.0", default-features = false }
tc-service = { version = "0.8.0", default-features = false }
serde_json = "1.0.61"
tp-keyring = "2.0.1"
thiserror = "1.0.23"

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
env_logger = "0.8.2"
tetcore-subxt = { path = ".." }
tempdir = "0.3.7"
test-node = { path = "../test-node" }
