[package]
name = "tetcore-subxt-proc-macro"
version = "0.13.0"
authors = ["David Craven <david@craven.ch>", "Parity Technologies <admin@parity.io>"]
edition = "2018"
autotests = false

license = "GPL-3.0"
repository = "https://github.com/tetcoin/tetcore-subxt"
documentation = "https://docs.rs/tetcore-subxt"
homepage = "https://core.tetcoin.org/"
description = "Derive calls, events, storage and tests for interacting Tetcore modules with tetcore-subxt"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.2"
proc-macro2 = "1.0.24"
proc-macro-crate = "0.1.5"
proc-macro-error = "1.0.4"
quote = "1.0.8"
syn = "1.0.58"
synstructure = "0.12.4"

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
codec = { package = "tetsy-scale-codec", version = "1.3.6", features = ["derive"] }
env_logger = "0.8.2"
pretty_assertions = "0.6.1"
sp-keyring = "2.0.1"
tetcore-subxt = { path = ".." }
trybuild = "1.0.38"

[[test]]
name = "balances"
path = "tests/balances.rs"
