[package]
name = "test-node"
version = "2.0.0"
authors = ["Anonymous"]
description = "Tetcore Node template"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.9"
log = "0.4.13"
structopt = "0.3.21"
parking_lot = "0.11.1"

tc-cli = { version = "0.8.0", features = ["wasmtime"] }
tet-core = "2.0.1"
tc-executor = { version = "0.8.0", features = ["wasmtime"] }
tc-service = { version = "0.8.0", features = ["wasmtime"] }
tp-inherents = "2.0.1"
tc-transaction-pool = "2.0.0"
tp-transaction-pool = "2.0.1"
tc-network = "0.8.0"
tc-consensus-aura = "0.8.0"
tp-consensus-aura = "0.8.1"
tp-consensus = "0.8.1"
tc-consensus = "0.8.0"
tc-finality-grandpa = "0.8.0"
tp-finality-grandpa = "2.0.1"
tc-client-api = "2.0.0"
tp-runtime = "2.0.1"
tc-basic-authorship = "0.8.0"

test-node-runtime = { path = "runtime" }

[build-dependencies]
build-script-utils = "2.0.1"
