[package]
name = "test-node-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "tetsy-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }

fabric-executive = { version = "2.0.0", default-features = false }
fabric-support = { version = "2.0.0", default-features = false }
fabric-system = { version = "2.0.0", default-features = false }
noble-aura = { version = "2.0.0", default-features = false }
noble-balances = { version = "2.0.0", default-features = false }
noble-grandpa = { version = "2.0.0", default-features = false }
noble-randomness-collective-flip = { version = "2.0.0", default-features = false }
noble-staking = { version = "2.0.0", default-features = false }
noble-sudo = { version = "2.0.0", default-features = false }
noble-timestamp = { version = "2.0.0", default-features = false }
noble-transaction-payment = { version = "2.0.0", default-features = false }
serde = { version = "1.0.116", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0", default-features = false }
sp-block-builder = { version = "2.0.0", default-features = false }
sp-consensus-aura = { version = "0.8.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-inherents = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-offchain = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-session = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-transaction-pool = { version = "2.0.0", default-features = false }
sp-version = { version = "2.0.0", default-features = false }

[build-dependencies]
tetcore-wasm-builder-runner = "1.0.6"

[features]
default = ["std"]
std = [
	"codec/std",
	"fabric-executive/std",
	"fabric-support/std",
	"fabric-system/std",
	"noble-aura/std",
	"noble-balances/std",
	"noble-grandpa/std",
	"noble-randomness-collective-flip/std",
	"noble-staking/std",
	"noble-sudo/std",
	"noble-timestamp/std",
	"noble-transaction-payment/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
