[package]
name = "test-node-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }

fabric-executive = { version = "2.0.0", default-features = false }
fabric-support = { version = "2.0.0", default-features = false }
fabric-system = { version = "2.0.0", default-features = false }
noble-aura = { version = "2.0.0", default-features = false }
noble-balances = { version = "2.0.0", default-features = false }
noble-grandpa = { version = "2.0.0", default-features = false }
noble-randomness-collective-flip = { version = "2.0.0", default-features = false }
noble-staking = { version = "2.0.0", default-features = false }
noble-sudo = { version = "2.0.0", default-features = false }
noble-timestamp = { version = "2.0.0", default-features = false }
noble-transaction-payment = { version = "2.0.0", default-features = false }
serde = { version = "1.0.116", optional = true, features = ["derive"] }
tp-api = { version = "2.0.0", default-features = false }
tp-block-builder = { version = "2.0.0", default-features = false }
tp-consensus-aura = { version = "0.8.0", default-features = false }
tet-core = { version = "2.0.0", default-features = false }
tp-inherents = { version = "2.0.0", default-features = false }
tet-io = { version = "2.0.0", default-features = false }
tp-offchain = { version = "2.0.0", default-features = false }
tp-runtime = { version = "2.0.0", default-features = false }
tp-session = { version = "2.0.0", default-features = false }
tetcore-std = { version = "2.0.0", default-features = false }
tp-transaction-pool = { version = "2.0.0", default-features = false }
tp-version = { version = "2.0.0", default-features = false }

[build-dependencies]
# tetcore-wasm-builder-runner = "1.0.6"
wasm-builder-runner = "1.0.6"

[features]
default = ["std"]
std = [
	"codec/std",
	"fabric-executive/std",
	"fabric-support/std",
	"fabric-system/std",
	"noble-aura/std",
	"noble-balances/std",
	"noble-grandpa/std",
	"noble-randomness-collective-flip/std",
	"noble-staking/std",
	"noble-sudo/std",
	"noble-timestamp/std",
	"noble-transaction-payment/std",
	"serde",
	"tp-api/std",
	"tp-block-builder/std",
	"tp-consensus-aura/std",
	"tet-core/std",
	"tp-inherents/std",
	"tet-io/std",
	"tp-offchain/std",
	"tp-runtime/std",
	"tp-session/std",
	"tetcore-std/std",
	"tp-transaction-pool/std",
	"tp-version/std",
]
